[gd_scene load_steps=4 format=3 uid="uid://mgwpwqnwcv6b"]

[ext_resource type="Script" uid="uid://bio0o7ixlt1nw" path="res://UI/LootSelection/loot_selection.gd" id="1_i5snk"]
[ext_resource type="PackedScene" uid="uid://bhbf22tlfp6g1" path="res://UI/Tooltip/tooltip.tscn" id="2_iwui4"]

[sub_resource type="LabelSettings" id="LabelSettings_8hrcw"]
font_size = 13

[node name="LevelUpSelection" type="MarginContainer"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i5snk")

[node name="SelectionContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="SelectionBorder" type="ColorRect" parent="SelectionContainer"]
layout_mode = 2
color = Color(0, 1.92523e-06, 0.881758, 1)

[node name="MarginContainer" type="MarginContainer" parent="SelectionContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="RarityBorder" type="ColorRect" parent="SelectionContainer/MarginContainer"]
layout_mode = 2
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="MarginContainer" type="MarginContainer" parent="SelectionContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="SelectionContainer/MarginContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="SelectionIcon" type="TextureRect" parent="SelectionContainer/MarginContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 8
color = Color(0, 0, 0, 1)

[node name="SelectionLabel" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -19.5
offset_right = 80.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
text = "Increased Damage Player Mod"
label_settings = SubResource("LabelSettings_8hrcw")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Tooltip" parent="." instance=ExtResource("2_iwui4")]
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="SelectionContainer/MarginContainer/MarginContainer/SelectionIcon" to="." method="_on_selection_icon_gui_input"]
